// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.getSymbols allSymbols 1`] = `
"functions:
[(4, 0), (6, 1)]  incrementCounter(counter)
[(8, 12), (8, 27)]  sum(a, b)
[(12, 2), (14, 3)]  doThing()
[(15, 16), (17, 3)]  doOtherThing()
[(20, 15), (20, 23)]  property()
[(24, 2), (26, 3)]  constructor() Ultra
[(28, 2), (30, 3)]  beAwesome(person) Ultra

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols call expression 1`] = `
"functions:
[(2, 0), (2, 70)]  evaluate(script, , )

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols call sites 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols class 1`] = `
"functions:
[(5, 2), (7, 3)]  hello() Test
[(12, 2), (15, 3)]  constructor() Test
[(17, 2), (19, 3)]  bar(a) Test
[(21, 8), (23, 3)]  baz(b) Test

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols component 1`] = `
"functions:
[(6, 2), (9, 3)]  constructor(props) Punny
[(11, 2), (11, 24)]  componentDidMount() Punny
[(13, 2), (13, 14)]  onClick() Punny
[(15, 2), (17, 3)]  renderMe() Punny
[(19, 2), (19, 13)]  render() Punny
[(29, 10), (31, 3)]  render() TodoView   1
[(37, 10), (39, 3)]  render() TodoClass   2
[(45, 10), (47, 3)]  render() createClass   3
[(53, 10), (55, 3)]  render() TodoClass   4
[(62, 0), (66, 1)]  Button()
[(70, 8), (70, 21)]  x()
[(72, 33), (79, 1)]  createElement(color)
[(82, 26), (84, 1)]  update(newColor)

hasJsx: true

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols destruct 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols es6 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols expression 1`] = `
"functions:
[(10, 10), (10, 23)]  render() TodoView
[(23, 0), (23, 28)]  params()
[(24, 11), (24, 32)]  pars()

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols finds symbols in an html file 1`] = `
"functions:
[(8, 2), (10, 3)]  sayHello(name)
[(22, 21), (24, 3)]  capitalize(name)
[(36, 3), (39, 3)]  iife()

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols flow 1`] = `
"functions:
[(2, 2), (4, 3)]  renderHello(name, action, ) App

hasJsx: false

hasTypes: true

framework: null"
`;

exports[`Parser.getSymbols func 1`] = `
"functions:
[(1, 0), (3, 1)]  square(n)
[(5, 7), (7, 1)]  exFoo()
[(9, 0), (11, 1)]  slowFoo()
[(13, 7), (15, 1)]  exSlowFoo()
[(17, 0), (19, 1)]  ret()
[(21, 8), (21, 21)]  child()
[(23, 1), (25, 1)]  anonymous()
[(28, 7), (30, 3)]  name()
[(32, 2), (34, 3)]  bar()
[(37, 15), (38, 1)]  root()
[(40, 0), (42, 1)]  test(a1, , )
[(44, 0), (44, 13)]  anonymous()    1
[(46, 0), (50, 1)]  ret2()

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols function names 1`] = `
"functions:
[(4, 7), (4, 20)]  foo()
[(5, 9), (5, 22)]  foo()    1
[(6, 6), (6, 19)]  42()
[(8, 2), (8, 10)]  foo()    2
[(9, 2), (9, 12)]  foo()    3
[(10, 2), (10, 9)]  42()    1
[(13, 6), (13, 19)]  foo()    4
[(14, 10), (14, 23)]  foo()    5
[(16, 10), (16, 22)]  foo()    6
[(17, 11), (17, 23)]  foo()    7
[(18, 11), (18, 23)]  foo()    8
[(20, 7), (20, 19)]  foo()    9
[(21, 8), (21, 20)]  foo()    10
[(22, 13), (22, 25)]  foo()    11
[(24, 0), (24, 35)]  fn()
[(24, 19), (24, 31)]  foo()    12
[(25, 0), (25, 40)]  f2()
[(25, 19), (25, 31)]  foo()    13
[(26, 0), (26, 45)]  f3()
[(26, 24), (26, 36)]  foo()    14
[(29, 8), (29, 21)]  foo() Cls   15
[(30, 10), (30, 23)]  foo() Cls   16
[(31, 7), (31, 20)]  42() Cls   2
[(33, 2), (33, 10)]  foo() Cls   17
[(34, 2), (34, 12)]  foo() Cls   18
[(35, 2), (35, 9)]  42() Cls   3
[(38, 1), (38, 13)]  anonymous()
[(40, 15), (40, 28)]  default()
[(44, 0), (44, 27)]  a(first, second)
[(45, 0), (45, 35)]  b(first = bla, second)
[(46, 0), (46, 32)]  c(first = {}, second)
[(47, 0), (47, 32)]  d(first = [], second)
[(48, 0), (48, 40)]  e(first = defaultObj, second)
[(49, 0), (49, 40)]  f(first = defaultArr, second)
[(50, 0), (50, 34)]  g(first = null, second)

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols jsx 1`] = `
"functions:


hasJsx: true

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols math 1`] = `
"functions:
[(1, 0), (12, 1)]  math(n)
[(2, 2), (5, 3)]  square(n)
[(14, 12), (14, 25)]  child()
[(15, 9), (15, 22)]  child2()

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols object expressions 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols optional chaining 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols private fields 1`] = `
"functions:
[(2, 2), (6, 3)]  constructor(secret, ) MyClass
[(13, 2), (15, 3)]  #getSalt() MyClass
[(17, 2), (23, 3)]  debug() MyClass

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols proto 1`] = `
"functions:
[(1, 12), (1, 25)]  foo()
[(3, 12), (3, 20)]  bar()
[(7, 14), (7, 27)]  initialize() TodoView
[(8, 2), (10, 3)]  doThing(b) TodoView
[(11, 10), (13, 3)]  render() TodoView

hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols react component 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: React"
`;

exports[`Parser.getSymbols regexp 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols var 1`] = `
"functions:


hasJsx: false

hasTypes: false

framework: null"
`;
